examples/test/testpolicy5071.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5071
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key39: value8
      key32: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value39
          key34: value20
      podSelector:
        matchLabels:
          key46: value21
